# birl-rs

./: .env.example  .gitignore  BENCHMARKS-RELEASE.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE.md  QUICKSTART.md  README.md  docker-compose.yml
crates/birl-cli/: Cargo.toml
crates/birl-cli/src/: main.rs
crates/birl-cli/src/commands/: bench.rs  compose.rs  examples.rs  mod.rs
crates/birl-core/: Cargo.toml
crates/birl-core/src/: cache.rs  compositor.rs  layers.rs  lib.rs  models.rs
crates/birl-server/: Cargo.toml
crates/birl-server/src/: main.rs
crates/birl-server/src/middleware/: auth.rs  mod.rs
crates/birl-server/src/routes/: create.rs  products.rs
crates/birl-storage/: Cargo.toml
crates/birl-storage/src/: cache.rs  lib.rs  local.rs  s3.rs
crates/sandwich-cli/: Cargo.toml
crates/sandwich-cli/src/: main.rs
crates/sandwich-cli/src/commands/: bench.rs  compose.rs  mod.rs
crates/sandwich-core/: Cargo.toml
crates/sandwich-core/src/: cache.rs  layers.rs  lib.rs  models.rs
crates/sandwich-server/: Cargo.toml
crates/sandwich-server/src/: main.rs
crates/sandwich-server/src/routes/: create.rs  mod.rs  products.rs
crates/sandwich-storage/: Cargo.toml
crates/sandwich-storage/src/: cache.rs  lib.rs  local.rs  s3.rs
