[workspace]
members = [
    "crates/sandwich-core",
    "crates/sandwich-storage",
    "crates/sandwich-server",
    "crates/sandwich-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DivBrands Team"]
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.43", features = ["full"] }
rayon = "1.10"

# Web Framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Image Processing
image = "0.25"
libvips = "1.8"

# Storage
aws-sdk-s3 = "1.74"
aws-config = "1.5"
bytes = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing & Caching
xxhash-rust = { version = "0.8", features = ["xxh64"] }
lru = "0.12"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error Handling & Logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"
