[package]
name = "birl-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "birl-server"
path = "src/main.rs"

[dependencies]
# Core crates
birl-core = { path = "../birl-core" }
birl-storage = { path = "../birl-storage" }

# Web Framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true

# AWS
aws-sdk-s3.workspace = true
aws-config.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error Handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
