[package]
name = "birl-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core crate
birl-core = { path = "../birl-core" }

# AWS S3
aws-sdk-s3.workspace = true
aws-config.workspace = true
bytes.workspace = true

# Caching
lru.workspace = true

# Async
tokio.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
futures.workspace = true
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
