[package]
name = "sandwich-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sandwich-server"
path = "src/main.rs"

[dependencies]
# Core crates
sandwich-core = { path = "../sandwich-core" }
sandwich-storage = { path = "../sandwich-storage" }

# Web Framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true

# AWS
aws-sdk-s3.workspace = true
aws-config.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error Handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
